2007-06-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/image.m (-DPSimage:): Replaced appendTransform: with
	prependTransform:. Undoes change from 2004-01-25.

2007-05-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GNUmakefile.postamble (after-clean): Remove
	$(BUNDLE_NAME)Info.plist on clean.

2007-04-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoSurface.h,
	* Source/cairo/CairoSurface.m: Remove default surface type setting.
	* Headers/cairo/XGCairoSurface.h: Remove includes.
	* Source/cairo/XGCairoSurface.m: Add includes.
	* Headers/cairo/XGCairoXImageSurface.h: Remove includes.
	* Source/cairo/XGCairoXImageSurface.m: Add includes, add  missing
	dealloc method.
	* Headers/cairo/CairoPSSurface.h,
	* Source/cairo/CairoPSSurface.m: New files.
	* Source/cairo/GNUmakefile: Add CairoPSSurface.
	* Headers/cairo/CairoGState.h,
	* Source/cairo/CairoGState.m: Replace method -GSSetDevice::: with
	-GSSetDevice::: and GSCurrentDevice::: with GSCurrentSurface:::.
	* Source/cairo/CairoGState.m (-DPSshowpage): Implement this method.
	* Source/cairo/CairoContext.m (-DPSgrestore, -DPSgsave): Remove
	these newly added methods.
	* Source/cairo/CairoContext.m (-initializeBackend): No longer set
	default surface type.
	* Source/cairo/CairoContext.m (-GSSetDevice:::): Create the
	surface here.
	* Source/cairo/CairoContext.m (-initWithContextInfo:): For PS
	output set the surface here.

2007-04-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m (-sendExternalEvent:... toWindow:) Tell
	xdnd about available types and selection owner.
	* Source/x11/XGServerEvent.m (processEvent:): Handle case
	SelectionRequest to get some simple xdnd support.
	Based on a patch by Matt Rice <ratmice@yahoo.com>.

2007-04-14  Adam Fedor  <fedor@gnu.org>

	* Version: Bump version

2007-04-04 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSContext.h: Remove ivar gtable.
	* Source/gsc/GSContext.m: Changed to use a gtable object
	shared between all contexts.